Word-wrap fix for OP.

--- a/style.css
+++ b/style.css
@@ -178,13 +178,18 @@ div.post.reply p.body {
 	margin-top: 0.8em;
 	padding-right: 3em;
 	padding-bottom: 0.3em;
-	word-wrap: break-word;
 }
 div.post.reply.highlighted {
 	background: #D6BAD0;
 }
 div.post.reply p.body a {
 	color: #D00;
+}
+div.post {
+	max-width: 97%;
+}
+div.post p.body {
+	word-wrap: break-word;
 }
 div.post.reply {
 	background: #D6DAF0;
@@ -194,7 +199,6 @@ div.post.reply {
 	border-width: 1px;
 	border-style: none solid solid none;
 	border-color: #B7C5D9;
-	max-width: 97%;
 }
 span.trip {
 	color: #228854;
